--- a/src/_var.scss
+++ b/src/_var.scss
@@ -1,6 +1,6 @@
 $border-color-hover: #666;
 $border-color: #999;
-$border-color-light: #ddd;
+$border-color-light: lighten($border-color, 10%);
 $border-radius: 4px;
 $box-shadow-color: rgba(0, 0, 0, 0.5);
 $button-active-bg: #eee;
