feat cascader 组件，样式完善。

--- a/src/_var.scss
+++ b/src/_var.scss
@@ -12,6 +12,7 @@ $font-size: 14px;
 $height: 32px;
 $red: #ed4014;
 $tabs-height: 40px;
+$gray: #eee;
 
 .box-shadow {
   box-shadow: 0 0 3px rgba(0, 0, 0, .15);
