--- a/src/_var.scss
+++ b/src/_var.scss
@@ -17,3 +17,11 @@ $gray: #eee;
 .box-shadow {
   box-shadow: 0 0 3px rgba(0, 0, 0, .15);
 }
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
