--- a/src/_var.scss
+++ b/src/_var.scss
@@ -1,5 +1,6 @@
+$animation-duration: .5s;
 $border-color-hover: #666;
-$border-color: #999;
+$border-color: #333;
 $border-color-light: lighten($border-color, 10%);
 $border-radius: 4px;
 $box-shadow-color: rgba(0, 0, 0, 0.5);
@@ -7,12 +8,15 @@ $button-active-bg: #eee;
 $button-bg: #fff;
 $button-height: 32px;
 $color: #333;
+$color: rgb(24, 144, 255);
 $disabled-color: #ccc;
 $font-size: 14px;
+$gray: #eee;
 $height: 32px;
 $red: #ed4014;
 $tabs-height: 40px;
-$gray: #eee;
+$toast-bg: rgba(0,0,0,0.74);
+$toast-min-height: 40px;
 
 .box-shadow {
   box-shadow: 0 0 3px rgba(0, 0, 0, .15);
